Add Gradle setup and main application code
Added Gradle build configuration and main class for xlsxEncrypter.